@@ -1,3 +1,8 @@
+Mon Sep  8 19:20:13 2003  Joern Thyssen  <jth@gnubg.org>
+
+	* import.c (ParseOldMove): handle oldmoves files generated by
+	fibs2html. Add warning for truly invalid moves.
+
 Mon Sep  8 11:26:52 2003  TAKAHASHI Kaoru  <kaoru@kaisei.org>
 
 	* gtkgame.c (GTKRecordShow): Use gettext to aszRating[] and
